sumo/tests/sumo/extended/vaporizer/errors/id_false/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: Unknown edge referenced in a vaporizer ('xxx').
Quitting (on error).
